<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorOnPrimary"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/search_layover_bg"
        android:outlineAmbientShadowColor="@color/search_layover_bg"
        android:outlineSpotShadowColor="@color/search_layover_bg"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:targetApi="p">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorOnPrimary"
        tools:context=".detail.DetailActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/background_img_detail"
                android:layout_width="match_parent"
                android:layout_height="520dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                tools:src="@drawable/poster_spiderman" />


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:background="@drawable/gradient"
                android:fitsSystemWindows="true"
                app:layout_constraintBottom_toBottomOf="@+id/background_img_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/languange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="16dp"
                android:fitsSystemWindows="true"
                android:fontFamily="@font/opensans"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/background_img_detail"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="English" />

            <TextView
                android:id="@+id/detail_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:drawablePadding="5dp"
                android:fitsSystemWindows="true"
                android:fontFamily="@font/opensans"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/background_img_detail"
                app:layout_constraintEnd_toStartOf="@+id/vote"
                tools:text="17000" />

            <TextView
                android:id="@+id/vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:drawablePadding="5dp"
                android:fitsSystemWindows="true"
                android:fontFamily="@font/opensans"
                android:text="@string/votes"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/background_img_detail"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView

                android:id="@+id/detail_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/img"
                android:fontFamily="@font/opensans"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/detail_vote"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="73" />

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/languange"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:text="Spiderman" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/opensans"
                android:text="@string/overview"
                app:layout_constraintStart_toStartOf="@+id/detail_title"
                app:layout_constraintTop_toBottomOf="@+id/detail_title" />

            <TextView
                android:id="@+id/detail_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/opensans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview"
                tools:text="Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own..." />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:src="@drawable/unfavorite"
        app:borderWidth="0dp"
        app:tint="@color/white"
        app:backgroundTint="?colorPrimary"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        android:contentDescription="@string/favorite" />


    <ProgressBar
        android:id="@+id/pBar_detail"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>