<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:title="@string/movies"
        android:icon="@drawable/ic_movies"/>

    <item
        android:id="@+id/navigation_tv"
        android:title="@string/tv_show"
        android:icon="@drawable/ic_tvshow"
        />

    <item
        android:id="@+id/navigation_fav"
        android:title="@string/favorite"
        android:icon="@drawable/unfavorite"/>

</menu>