<resources>
    <string name="app_name">MovieCatalogue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="tv_show">Tv Show</string>
    <string name="votes">Votes</string>
    <string name="overview">Overview</string>
    <string name="favorite">Favorite</string>
    <string name="movies_favorite">Movies Favorite</string>
    <string name="tv_show_favorite">TV Favorite</string>
    <string name="empty">Empty</string>

</resources>