<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.content.favorite.FavoriteMovieFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movie_fav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_movie" />

    <include
        android:id="@+id/empty_movie"
        layout="@layout/empty_layout"
        android:visibility="gone" />

</FrameLayout>